# pygments-pytest

./: .gitignore  .pre-commit-config.yaml  .travis.yml  README.md  azure-pipelines.yml  index.html  pygments_pytest.py  requirements-dev.txt  setup.cfg  setup.py  tox.ini
demo/: .gitignore  color.css  demo.sh  test_blank_code_line[-q]_ansi.html  test_blank_code_line[-q]_pytest.html  test_blank_code_line[-v]_ansi.html  test_blank_code_line[-v]_pytest.html  test_blank_code_line[]_ansi.html  test_blank_code_line[]_pytest.html  test_collection_failure_syntax_error[-q]_ansi.html  test_collection_failure_syntax_error[-q]_pytest.html  test_collection_failure_syntax_error[-v]_ansi.html  test_collection_failure_syntax_error[-v]_pytest.html  test_collection_failure_syntax_error[]_ansi.html  test_collection_failure_syntax_error[]_pytest.html  test_collection_unknown_fixture[-q]_ansi.html  test_collection_unknown_fixture[-q]_pytest.html  test_collection_unknown_fixture[-v]_ansi.html  test_collection_unknown_fixture[-v]_pytest.html  test_collection_unknown_fixture[]_ansi.html  test_collection_unknown_fixture[]_pytest.html  test_deprecated_raises_exec_failure[-q]_ansi.html  test_deprecated_raises_exec_failure[-q]_pytest.html  test_deprecated_raises_exec_failure[-v]_ansi.html  test_deprecated_raises_exec_failure[-v]_pytest.html  test_deprecated_raises_exec_failure[]_ansi.html  test_deprecated_raises_exec_failure[]_pytest.html  test_different_test_types[-q]_ansi.html  test_different_test_types[-q]_pytest.html  test_different_test_types[-v]_ansi.html  test_different_test_types[]_ansi.html  (+56 more)
(+4 files in other folders)
