[metadata]
name = pygments_pytest
version = 1.1.1
description = A pygments lexer for pytest output.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/asottile/pygments-pytest
author = Anthony Sottile
author_email = asottile@umich.edu
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
py_modules = pygments_pytest
install_requires = pygments
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*

[options.entry_points]
pygments.lexers =
    pytest=pygments_pytest:PytestLexer

[bdist_wheel]
universal = True
